tyle login, favicon, title

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pr-br">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Plataforma EaD"
-    />
-    <title>Plataforma EaD</title>
+    <link rel="shortcut icon" href="images//favicon.png" />
+    <title>Formação de Consultor - Patrick Suity</title>
   </head>
   <body>
     <noscript>Você precisa ativar o Javascript para utilizar este site.</noscript>
