--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" href="images//favicon.png" />
-    <title>Formação de Consultor - Patrick Suyti</title>
+    <title>Benova.Academy</title>
   </head>
   <body>
     <noscript>Você precisa ativar o Javascript para utilizar este site.</noscript>
